# Thesis-3DSG-Project

./: README.md
Depth/Unity/: BlockMatching.compute  CensusTransform.compute  CostAggregationHorizontal.compute  CostAggregationVertical.compute  DepthScript.cs  ScriptMono.cs  SobelFilter.compute  blockMatchingSAD.compute  depthShader.shader  matchingCost.compute  medianFilter.compute  realDepth.cs  (+2 more)
ICASSP/: CMakeLists.txt  lav.cpp  lav.h  lav_audio_mixer.cpp  lav_audio_mixer.h  lav_audio_stream.cpp  lav_audio_stream.h  lav_camera_acquisition.cpp  lav_camera_acquisition.h  lav_constants.cpp  lav_constants.h  lav_log.cpp  lav_log.h  lav_sonifier.cpp  lav_sonifier.h  lav_sound_database.cpp  lav_sound_database.h  lav_synthesizer.cpp  lav_synthesizer.h  lav_video_processor.cpp  lav_video_processor.h  lav_wav.cpp  lav_wav.h  main.cpp
ICASSP/Camera/: realsense_camera.h  udp_camera.cpp  video_capture.h
ICASSP/Detection/: CMakeLists.txt  Detecteur.cpp  DetecteurLibtorch.cpp  DetecteurLibtorch.h  DetecteurTensorRT.h  Rect.cpp  Rect.h
ICASSP/Detection/utils/: logger.h
ICASSP/Detection/yolo/: yolo.h  yololayer.cu  yololayer.h
SITIS/: CMakeLists.txt  main.cpp
SITIS/Camera/: CMakeLists.txt  camera.h  opencv_camera.cpp  opencv_camera.h  realsense_camera.h  udp_camera.h  video_capture.h
SITIS/marker/: CMakeLists.txt  Decoder.cpp  Decoder.h  Drawer.cpp  Drawer.h  EDInterface.cpp  EDInterface.h  Ellipse.cpp  Ellipse.h  Marker.cpp  Marker.h  MarkerIDs.h  PoseRefiner.cpp  PoseRefiner.h  Quad.cpp  Quad.h  QuadDetector.cpp  QuadDetector.h  Stag.cpp  Stag.h  colors.h  utility.cpp  utility.h
SITIS/marker/ED/: ED.cpp  ED.h  EDInternals.cpp  EDInternals.h  EDLines.cpp  EDLines.h  GradientOperators.cpp  GradientOperators.h  GradientOperatorsCV.h  ImageSmooth.cpp  ImageSmooth.h  ImageSmoothCV.h  LineSegment.cpp  LineSegment.h  MyMath.cpp  MyMath.h  NFA.cpp  NFA.h  Timer.h  Utilities.cpp  ValidateEdgeSegments.cpp  ValidateEdgeSegments.h
SITIS/path/: CMakeLists.txt  graph.cpp  graph.h  graph.txt  pathFinding.cpp  pathFinding.h
SITIS/sonifier/: CMakeLists.txt  lav.cpp  lav.h  lav_audio_mixer.cpp  lav_audio_mixer.h  lav_audio_stream.cpp  lav_audio_stream.h  lav_camera_acquisition.cpp  lav_camera_acquisition.h  lav_constants.cpp  lav_constants.h  lav_log.cpp  lav_log.h  lav_manager.cpp  lav_manager.h  lav_sonifier.cpp  lav_sonifier.h  lav_sound_database.cpp  lav_sound_database.h  lav_synthesizer.cpp  lav_synthesizer.h  lav_video_processor.cpp  lav_video_processor.h  lav_vocal.cpp  lav_vocal.h  lav_wav.cpp  lav_wav.h
SITIS/sound/: CMakeLists.txt  sound_reader.cpp  sound_reader.h  sound_reader_hrtf.cpp  sound_reader_hrtf.h  sound_wav.cpp  sound_wav.h
Sensors/: CMakeLists.txt  main.cpp
Sensors/CNN_Network/Detection/: CMakeLists.txt  Detecteur.cpp  Detecteur.h  DetecteurLibtorch.cpp  DetecteurLibtorch.h  DetecteurTensorRT.cpp  DetecteurTensorRT.h  Logger.h  Rect.cpp  Rect.h  macros.h
Sensors/CNN_Network/Detection/yolo/: yolo.h  yololayer.cu  yololayer.h
Sensors/CNN_Network/Detection/yolov8/: Yolov8TRT.cpp  Yolov8TRT.h  yolov8layer.cu  yolov8layer.h
Sensors/CNN_Network/Segmentation/: CMakeLists.txt  Segmentation.h  SegmentationLibtorch.cpp  SegmentationLibtorch.h  SegmentationRT.cpp  SegmentationRT.h
Sensors/CNN_Network/Segmentation/Plugins/: argmax.cu  argmax.h
Sensors/Camera/: camera.cpp  opencv_camera.cpp  opencv_camera.h  opencv_videofile.cpp  opencv_videofile.h  realsense_camera.cpp  video_capture.h
Sensors/Common/: CMakeLists.txt  geographic_coordinate.cpp  geographic_coordinate.h  time.h  utils.h
Sensors/Graph/: CMakeLists.txt  Map.cpp  Map.h  Node.h
Sensors/Python_Test/: Graph.py  main.py  utils.py
Sensors/Qt/: CMakeLists.txt  Qt.h
Sensors/RapidXML/: CMakeLists.txt
Sensors/Sensor/: CMakeLists.txt
Sensors/Sensor/Board/: CMakeLists.txt  jetson_orin_AGX.h
Sensors/Sensor/GPIO/: CMakeLists.txt  GPIO.cpp  GPIO.h  i2c.cpp  i2c.h  spi.cpp  spi.h  uart.cpp  uart.h
Sensors/Sensor/GPS_Device/: CMakeLists.txt  adafruit_gps.cpp  adafruit_gps.h  gps_capture.h  gps_constant.h
Sensors/Sensor/IMU/: CMakeLists.txt  PModNav.cpp  PModNav.h  adafruit_bno055_constant.h  adafruit_imu_bno055.cpp  adafruit_imu_bno055.h  adafruit_imu_bno055_i2c.cpp  adafruit_imu_bno055_i2c.h  ahrs.h  constant.h  euler_angle.cpp  euler_angle.h  imu_capture.h  madgwick_ahrs.cpp  madgwick_ahrs.h  mahony_ahrs.cpp  mahony_ahrs.h  quaternion.cpp  quaternion.h  simple_ahrs.cpp  simple_ahrs.h
Sensors/Sonifier/: CMakeLists.txt  lav.cpp  lav.h  lav_audio_mixer.cpp  lav_audio_mixer.h  lav_audio_stream.cpp  lav_audio_stream.h  lav_camera_acquisition.cpp  lav_camera_acquisition.h  lav_computer.cpp  lav_computer.h  lav_constants.cpp  lav_constants.h  lav_imu_acquisition.cpp  lav_imu_acquisition.h  lav_manager.cpp  lav_manager.h  lav_path_processing.cpp  lav_path_processing.h  lav_sonifier.cpp  lav_sonifier.h  lav_sound_database.cpp  lav_sound_database.h  lav_synthesizer.cpp  lav_synthesizer.h  lav_video_processor.cpp  lav_video_processor.h  lav_vocal.cpp  lav_vocal.h  lav_wav.cpp  lav_wav.h  logger.cpp  logger.h
Sensors/Sound/: CMakeLists.txt  sound_reader.cpp  sound_reader.h  sound_reader_hrtf.cpp  sound_reader_hrtf.h  sound_wav.cpp  sound_wav.h
Sensors/Tracking/: CMakeLists.txt  ObjectTracking.cpp  ObjectTracking.h  TrackingAlgorithm.cpp  TrackingAlgorithm.h  lapjv.cpp  lapjv.h
Sensors/Tracking/ByteTrack/: ByteTrack.cpp  ByteTrack.h  KalmanFilter.cpp  KalmanFilter.h  TrackObjectByteSort.cpp  TrackObjectByteSort.h
Sensors/Tracking/Sort/: Sort.cpp  Sort.h  TrackObjectSort.cpp  TrackObjectSort.h
TensorRT-DDRNET/Serialization/: CMakeLists.txt  main.cpp
TensorRT-DDRNET/Serialization/include/: block.h  config.h  model.h  utils.h
TensorRT-DDRNET/Serialization/src/: block.cpp  model.cpp
TensorRT-DDRNET/SimpleSegmentation/: CMakeLists.txt  main.cpp
TensorRT-DDRNET/SimpleSegmentation/Plugins/: argmax.cu  argmax.h
TensorRT-DDRNET/SimpleSegmentation/include/: Logger.h  RealsenseCamera.h  Segmentation.h
TensorRT-DDRNET/SimpleSegmentation/src/: RealsenseCamera.cpp  Segmentation.cpp
